# spock

./: .gitignore  LICENSE  main.py  pyproject.toml
gene_research/: 3_lab3.ipynb  class_diagram.txt  gene_db_classes.py  gene_db_prompts.py  initial_gene_researcher.ipynb
gene_research/1 perplexitiy single prompt/: draft_url2citation_notebook.ipynb  example.py  extract_citation.py  finding_map.tsv  gene_db_classes.py  gene_db_prompts.py  run_create_bibtex.py  run_first_prompt_perplexity.py  single_prompt_openai_results.ipynb  single_prompt_perplexity.ipynb  url2citation2.py
gene_research/1 perplexitiy single prompt/batch_results/: MED4_genes_filter.csv  MED4_genes_filter_head2.csv  citations_urls.txt  second_pass_records.jsonl  second_pass_results.jsonl
genomes/HOT1A3/: GCF_001578515.1_ASM157851v1_genomic.fna.fai  HOT1A3 gbff to EC list.ipynb  HOT1A3.bed  HOT1A3_KO.tsv  HOT1A3_NCBI_ECnumber.tsv  HOT1A3_NCBI_gene_list.csv  HOT1A3_ncbi_double_protein_id.csv  HOT1A3_pathways.csv  HOT1A3_protein.faa  HOT1A3_reactions_biocyc.tst  HOT1A3_reactions_biocyc_multi.txt  HOT1A3_user_ko.txt  genomic.gff  manage genome HOT1A3.ipynb  sequence_report.jsonl
genomes/KEGG/: kegg_compounds.csv
genomes/MED4/: GCF_000011465.1_ASM1146v1_genomic.fna  GCF_000011465.1_ASM1146v1_genomic.fna.fai  MED4.bed  MED4_PMM2locus.csv  MED4_biocyc_pathways.txt  MED4_named_genes_NCBI.csv  MED4_pathways.csv  MED4_protein.faa  MED4_user_ko.txt  Pro_MED4.gff  README.get_pmm  cds_from_genomic.fna  genomic.gff  genomic.gtf  sequence_report.jsonl  uniprot-taxonomy-59919.tab
url2citation/: url2citation.py
(+1903 files in other folders)
