[project]
name = "spock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain[openai]>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "playwright>=1.53.0",
    "lxml>=6.0.0",
    "langchain-community>=0.3.27",
    "gradio>=5.35.0",
    "langchain-anthropic>=0.3.17",
    "gffpandas>=1.2.0",
    "pathvalidate>=3.3.1",
    "langchain-perplexity>=0.1.1",
    "jsonlines>=4.0.0",
    "seaborn>=0.13.2",
    "bibtexparser>=1.4.3",
]
